--- a/frontend/Kkomdae/app/src/main/res/layout-land/fragment_screen_shot_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout-land/fragment_screen_shot_guide.xml
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:checked="true"
+        android:checked="false"
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/btn_shot"
