--- a/backend/kkomdae/src/main/resources/templates/test-results.html
+++ b/backend/kkomdae/src/main/resources/templates/test-results.html
@@ -111,7 +111,7 @@
                 <th>대여/반납</th>
                 <th>지역</th>
                 <th>교육생 이름</th>
-                <th>기수</th>
+                <th>교육기수</th>
                 <th>실패한 키</th>
                 <th>실패한 포트</th>
                 <th>카메라 상태</th>
