fix: 프래그먼트 스택 관리, 다이얼로그 설정, 재촬영후 메시지 업데이트
Former-commit-id: 1a2891df00de4a49dc91429fa229ca4ad29938fa

--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_step2_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_step2_guide.xml
@@ -290,6 +290,7 @@
         android:textColor="@color/white"
         android:text="건너뛰기"
         android:layout_margin="24dp"
+        android:visibility="gone"
         style="@style/Title1"
         app:layout_constraintBottom_toTopOf="@id/btn_next"
         app:layout_constraintStart_toStartOf="parent"
