--- a/frontend/Kkomdae/app/src/main/res/layout-land/fragment_font_shot_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout-land/fragment_font_shot_guide.xml
@@ -44,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="자동촬영"
+        android:visibility="gone"
         style="@style/Caption3"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="@id/sw_auto"
